--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,8 @@
 			opacity:.9;
 			position: fixed;
 			width: 100%;
+			top: 0;
+    		left: 0;
     		z-index: 100;
 		}
 		#svgForStroke{position: fixed;top: 100px;left: 30px;}
@@ -83,3 +85,57 @@
 		.pangxie{right: 100%; top: 83%;}
 		.tuzi{left: 50%; top: 100%;}
 		.banma{left: 100%; top: 20%;}
+		section{
+			right: 40px;
+		    position: absolute;
+		    top: 100px;
+		}
+		.content{
+			padding: 25px 20px;
+			border-radius: 8px;
+			text-align: left;
+			line-height: 40px;
+			position: relative;
+			font-size: 14px;
+			width: 200px;
+			background-color: rgba(255,255,255,0.5);
+			-webkit-transition: all 0.8s ease-in;
+			-moz-transition: all 0.8s ease-in;
+			-ms-transition: all 0.8s ease-in;
+			transition: all 0.8s ease-in;
+			-webkit-transform-origin: 0px 0px;
+		 	-moz-transform-origin: 0px 0px;
+		 	transform-origin: 0px 0px;
+			-webkit-transform: rotateY(-90deg);
+		 	-moz-transform: rotateY(-80deg);
+			transform: rotateY(-90deg);
+			-moz-backface-visibility: hidden;
+			-webkit-backface-visibility: hidden;
+			backface-visibility: hidden;
+			margin-top:600px;
+		}
+		.content.fleft{
+			left: -118%;
+			-webkit-transform-origin: 100% 0px;
+		 	-moz-transform-origin: 100% 0px;
+		 	transform-origin: 100% 0px;
+		}
+		.content:after{
+			content: "";
+			display: block;
+			position:absolute;
+			width: 0px;
+			height: 0px;
+		    border-bottom: 11px solid transparent;
+		    border-right: 13px solid rgba(255,255,255,0.5);
+		    border-top: 11px solid transparent;
+		    top: 39%;
+		    left: -5%;
+		}
+		.content.fleft:after{
+		    border-bottom: 11px solid transparent;
+		    border-left: 13px solid rgba(255,255,255,0.5);
+		    border-right:0;
+		    border-top: 11px solid transparent;
+		 	left: 100%;
+		}
